src/objects/LeanData__Persona_Condition__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>LeanData__Condition_Index__c</fullName>
        <label>ConditionIndex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Field_Name__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_Type__c</fullName>
        <label>ObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Persona_Name__c</fullName>
        <label>PersonaName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PersonaCondition</label>
</CustomObject>